--- a/coffee/index.html
+++ b/coffee/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -12,42 +13,46 @@
 </head>
 <body>
 <header>
-        <a href="#test"  class="kok visible" id="backtotop">
-            <i class=" fas fa-arrow-circle-up fa-3x" style="float: right;margin-right: 20px"></i>
-        </a>
+    <a href="#test" class="kok visible" id="backtotop">
+        <i class=" fas fa-arrow-circle-up fa-3x" style="float: right;margin-right: 20px"></i>
+    </a>
     <div class="overlay ">
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent border-bottom ">
             <div class="container">
                 <a class="navbar-brand " id="test" href="#">koko</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent" >
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">contact us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="bu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            coffe
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Tea</a>
-                            <a class="dropdown-item" href="#">coffe</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contact us</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="bu"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                coffe
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Tea</a>
+                                <a class="dropdown-item" href="#">coffe</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
         <div class="pharse text-center wow rubberBand">
             <h1>POTENTI INTEGER DIGNISSIM</h1>
-            <p>Pharetra dicta! Esse sapiente proident, ex occaecat nulla cupiditate odit! Aenean? Nulla nullam, unde volutpat.</p>
+            <p>Pharetra dicta! Esse sapiente proident, ex occaecat nulla cupiditate odit! Aenean? Nulla nullam, unde
+                volutpat.</p>
             <p>Pharetra dicta! Esse sapiente proident</p>
             <a class="btn btn-primary " href="#arti">Learn More....</a>
         </div>
@@ -58,34 +63,40 @@
 </header>
 <!--start Artical-->
 <div id="arti" class="artical wow bounceInDown">
-<div class="container">
-    <div class="row art">
-        <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
-            <h1>SUSCIPIT URNA QUIS</h1>
-            <p>Ipsum feugiat diam fermentum ornare proin blandit rhoncus eros nec vulputate aliquam tempus non dolor vitae finibus […]</p>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4  arti">
-            <h1>CURSUS SOLLICITUDIN</h1>
-            <p>Suscipit lacus eu posuere vehicula cras lacinia nunc libero feugiat tristique massa mattis quis donec eu porttitor consequat […]</p>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
-            <h1>PHASELLUS BLANDIT</h1>
-            <p>Felis proin hendrerit sapien ipsum quis accumsan ipsum vestibulum faucibus nunc rhoncus lectus non nunc dapibus congue […]</p>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
-            <h1>DIGNISSIM TRISTIQUE</h1>
-            <p>Vivamus sollicitudin metus cursus pulvinar posuere nam fringilla pretium fringilla vestibulum commodo sagittis elit dui rutrum velit […]</p>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
-            <h1>ANTE LUCTUS MALESUADA</h1>
-            <p>At porta massa fringilla vitae elit donec tellus lorem rhoncus in orci et efficitur hendrerit erat nam porttitor duis eget dignissim […]</p>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
-            <h1>ERAT MAURIS DONEC</h1>
-            <p>Lacus ut lorem rhoncus dictum sed nisl eros consequat vel velit et venenatis accumsan nibh sed sit amet turpis convallis […]</p>
+    <div class="container">
+        <div class="row art">
+            <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
+                <h1>SUSCIPIT URNA QUIS</h1>
+                <p>Ipsum feugiat diam fermentum ornare proin blandit rhoncus eros nec vulputate aliquam tempus non dolor
+                    vitae finibus […]</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4  arti">
+                <h1>CURSUS SOLLICITUDIN</h1>
+                <p>Suscipit lacus eu posuere vehicula cras lacinia nunc libero feugiat tristique massa mattis quis donec
+                    eu porttitor consequat […]</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
+                <h1>PHASELLUS BLANDIT</h1>
+                <p>Felis proin hendrerit sapien ipsum quis accumsan ipsum vestibulum faucibus nunc rhoncus lectus non
+                    nunc dapibus congue […]</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
+                <h1>DIGNISSIM TRISTIQUE</h1>
+                <p>Vivamus sollicitudin metus cursus pulvinar posuere nam fringilla pretium fringilla vestibulum commodo
+                    sagittis elit dui rutrum velit […]</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
+                <h1>ANTE LUCTUS MALESUADA</h1>
+                <p>At porta massa fringilla vitae elit donec tellus lorem rhoncus in orci et efficitur hendrerit erat
+                    nam porttitor duis eget dignissim […]</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 arti">
+                <h1>ERAT MAURIS DONEC</h1>
+                <p>Lacus ut lorem rhoncus dictum sed nisl eros consequat vel velit et venenatis accumsan nibh sed sit
+                    amet turpis convallis […]</p>
+            </div>
         </div>
     </div>
-</div>
 </div>
 <!--End Artical-->
 
@@ -95,13 +106,13 @@
     <div class="overlay">
         <div class="container">
             <div class="head">
-            <h1>LAOREET DOLOR ETIAM</h1>
-            <h6></h6>
+                <h1>LAOREET DOLOR ETIAM</h1>
+                <h6></h6>
             </div>
             <div class="row ">
-                 <div class="col-lg-8 col-md-8 col-xs-8 col-sm-8 lao">
-                      <h5>Orci dignissim placerat quisque</h5>
-                  </div>
+                <div class="col-lg-8 col-md-8 col-xs-8 col-sm-8 lao">
+                    <h5>Orci dignissim placerat quisque</h5>
+                </div>
                 <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 lao">
                     <h5>Malesuada congue pulvina</h5>
                 </div>
@@ -109,11 +120,12 @@
                     <p>Odio in accumsan in finibus lacus vitae condimentum dignissim urna est auctor ant
                         e eget viverra ex ex non enim fusce vitae leo eleifend rutrum nisl sit amet congue
                         ligula ut vulputate hendrerit nisl ut condimentum duis.</p>
-                    <p>Luctus quam ut est aliquam et ultricies nisl vulputate donec in luctus arcu maecenas nec metus ac magna posuere […]</p>
+                    <p>Luctus quam ut est aliquam et ultricies nisl vulputate donec in luctus arcu maecenas nec metus ac
+                        magna posuere […]</p>
                     <a class="btn btn-primary" href="#">Read More>></a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-xs-4 col-sm-4 lao">
-                    <iframe width="350" height="200" src="https://www.youtube.com/embed/4ZiD3fuYNYE" ></iframe>
+                    <iframe src="https://www.youtube.com/embed/4ZiD3fuYNYE"></iframe>
                     <p>Lacus vitae ullamcorper cum sociis natoque penatibus et magnis dis.</p>
                 </div>
             </div>
@@ -133,7 +145,7 @@
                 </div>
             </div>
             <div class="col-lg-8  col-xs-8 col-sm-8">
-                <div class="row photo-right" >
+                <div class="row photo-right">
                     <div class="col-lg-6 photo-left col-xs-6 col-sm-6">
                         <img src="img/christiana-rivers-466086-unsplash-min.jpg" class="img-thumbnail">
                     </div>
@@ -143,14 +155,14 @@
                     <div class="col-lg-6 photo-left col-xs-6 col-sm-6">
                         <img src="img/emre-gencer-364602-unsplash-min.jpg" class="img-thumbnail">
                     </div>
-                        <div class="col-lg-6 photo-left col-xs-6 col-sm-6">
-                            <img src="img/tyler-nix-435498-unsplash-min.jpg" class="img-thumbnail">
-                        </div>
+                    <div class="col-lg-6 photo-left col-xs-6 col-sm-6">
+                        <img src="img/tyler-nix-435498-unsplash-min.jpg" class="img-thumbnail">
+                    </div>
 
                 </div>
             </div>
+        </div>
     </div>
-</div>
 </div>
 <!--end gallary-->
 
@@ -170,7 +182,8 @@
                     <li>Nisi lacus aliquam</li>
                     <li>Turpis feugiat ornare</li>
                     <li>Gravida ultricies</li>
-                    <li>Ipsum magna vivamus</li><hr>
+                    <li>Ipsum magna vivamus</li>
+                    <hr>
                     <li>(SAVE 50%)</li>
                     <a class="btn btn-primary" href="#">CONDIMENTUM</a>
 
@@ -221,19 +234,19 @@
 
 <div class="counter">
     <div class="row">
-        <div class="col-lg-3 col-xsm-3 col-sm-3">
+        <div class="count col-lg-3  col-sm-3">
             <p>VESTIBULUM</p>
             <p>12345</p>
         </div>
-        <div class="col-lg-3 col-xsm-3 col-sm-3">
+        <div class="count col-lg-3  col-sm-3">
             <p>PULVINAR</p>
             <p>12345</p>
         </div>
-        <div class="col-lg-3 col-xsm-3 col-sm-3">
+        <div class="count col-lg-3  col-sm-3">
             <p>VOLUTPAT</p>
             <p>12345</p>
         </div>
-        <div class="col-lg-3 col-xsm-3 col-sm-3">
+        <div class="count col-lg-3  col-sm-3 ">
             <p>ACCUMSAN</p>
             <p>12345</p>
         </div>
@@ -252,27 +265,30 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="overlay"></div>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption  d-md-block slide">
                     <img src="img/christiana-rivers-466086-unsplash-min.jpg">
-                    <p>Ridiculus mus nunc ut nisi sit amet tellus aliquam aliquet suspendisse sit amet lacus a felis sagittis fringilla at et nibh donec placerat luctus nisi nec malesuada.</p>
+                    <p>Ridiculus mus nunc ut nisi sit amet tellus aliquam aliquet suspendisse sit amet lacus a felis
+                        sagittis fringilla at et nibh donec placerat luctus nisi nec malesuada.</p>
                     <h5>d.michael</h5>
                     <p>good</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="overlay"></div>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption  d-md-block">
                     <img src="img/christiana-rivers-466086-unsplash-min.jpg">
-                    <p>Ridiculus mus nunc ut nisi sit amet tellus aliquam aliquet suspendisse sit amet lacus a felis sagittis fringilla at et nibh donec placerat luctus nisi nec malesuada.</p>
+                    <p>Ridiculus mus nunc ut nisi sit amet tellus aliquam aliquet suspendisse sit amet lacus a felis
+                        sagittis fringilla at et nibh donec placerat luctus nisi nec malesuada.</p>
                     <h5>eng.joe</h5>
                     <p>good</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="overlay"></div>
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption  d-md-block">
                     <img src="img/christiana-rivers-466086-unsplash-min.jpg">
-                    <p>Ridiculus mus nunc ut nisi sit amet tellus aliquam aliquet suspendisse sit amet lacus a felis sagittis fringilla at et nibh donec placerat luctus nisi nec malesuada.</p>
+                    <p>Ridiculus mus nunc ut nisi sit amet tellus aliquam aliquet suspendisse sit amet lacus a felis
+                        sagittis fringilla at et nibh donec placerat luctus nisi nec malesuada.</p>
                     <h5>eng.koko</h5>
                     <p>good</p>
                 </div>
@@ -329,7 +345,8 @@
                     <h5 class="max">A MAXIMUS LECTUS</h5>
                     <h5>SUSPENDISSE POTENTI PROIN</h5>
                     <p>Friday, 6th April 2045</p>
-                    <p>Tortor a erat aliquam a consequat augue a elementum ante donec luctus posuere mauris non tempus felis […]</p>
+                    <p>Tortor a erat aliquam a consequat augue a elementum ante donec luctus posuere mauris non tempus
+                        felis […]</p>
                 </div>
                 <div class="col-lg-3 col-md-3 col-xsm-3 col-sm-3">
                     <h5>NON SAPIEN NUNCT</h5>
@@ -354,7 +371,7 @@
             <a href="https://www.linkedin.com/uas/login"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
         </div>
-</div>
+    </div>
 </div>
 <!--End footer-->
 
